# apis/scanner/v1alpha1/types.go
@@ -1,6 +1,7 @@
 package v1alpha1
 
 import (
+	core "k8s.io/api/core/v1"
 	metav1 "k8s.io/apimachinery/pkg/apis/meta/v1"
 )
 
@@ -31,8 +32,27 @@ type ScanResult struct {
 	Features []Feature `json:"features,omitempty"`
 }
 
-type ImageReviewResponse struct {
+type WorkloadReviewResponse struct {
 	Images []ScanResult `json:"images,omitempty"`
+}
+
+const (
+	ResourceKindWorkloadReview     = "WorkloadReview"
+	ResourcePluralWorkloadReview   = "workloadreviews"
+	ResourceSingularWorkloadReview = "workloadreview"
+)
+
+// +genclient
+// +genclient:skipVerbs=list,create,update,patch,delete,deleteCollection,watch
+// +k8s:openapi-gen=true
+// +k8s:deepcopy-gen:interfaces=k8s.io/apimachinery/pkg/runtime.Object
+
+// WorkloadReview describes a peer ping request/response.
+type WorkloadReview struct {
+	metav1.TypeMeta   `json:",inline"`
+	metav1.ObjectMeta `json:"metadata,omitempty"`
+	// +optional
+	Response *WorkloadReviewResponse `json:"response,omitempty"`
 }
 
 const (
@@ -51,5 +71,23 @@ type ImageReview struct {
 	metav1.TypeMeta   `json:",inline"`
 	metav1.ObjectMeta `json:"metadata,omitempty"`
 	// +optional
-	Response *ImageReviewResponse `json:"response,omitempty"`
+	Request *ImageReviewRequest `json:"request,omitempty"`
+}
+
+type ImageReviewRequest struct {
+	// Docker image name.
+	// More info: https://kubernetes.io/docs/concepts/containers/images
+	// This field is optional to allow higher level config management to default or override
+	// container images in workload controllers like Deployments and StatefulSets.
+	// +optional
+	Image string `json:"image,omitempty"`
+
+	// ImagePullSecrets is an optional list of references to secrets in the same namespace to use for pulling any of the images used by this PodSpec.
+	// If specified, these secrets will be passed to individual puller implementations for them to use. For example,
+	// in the case of docker, only DockerConfig type secrets are honored.
+	// More info: https://kubernetes.io/docs/concepts/containers/images#specifying-imagepullsecrets-on-a-pod
+	// +optional
+	// +patchMergeKey=name
+	// +patchStrategy=merge
+	ImagePullSecrets []core.ObjectReference `json:"imagePullSecrets,omitempty" patchStrategy:"merge" patchMergeKey:"name"`
 }
